--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -12,3 +12,52 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.back1{
+  background: rgba(92, 146, 182, 0.533)
+}
+.login1{
+  background: rgba(71, 184, 60, 0.533);
+  width:20%;
+  height:400px
+}
+.navhauter{
+  height: 110px;
+}
+.carousel-indicators li {
+  border-color: #f4511e;
+}
+.carousel-indicators li.active {
+  background-color: #f4511e;
+}
+.navbar {
+  margin-bottom: 0;
+  background-color: #2edd17;
+  z-index: 9999;
+  border: 0;
+  font-size: 12px !important;
+  line-height: 1.42857143 !important;
+  letter-spacing: 4px;
+  border-radius: 0;
+}
+.navbar li a, .navbar .navbar-brand {
+  color: #fff !important;
+}
+
+.nav-bar{
+  background: #2edd17;
+}
+.navbar-default .navbar-toggle {
+  border-color: transparent;
+  color: #fff !important;
+}
+.navcolor:hover{
+  background: rgb(143, 194, 145);
+  color:#f4511e;
+}
+.navcolor:focus{
+  background: rgb(4, 102, 28);
+  color:#f4511e;
+}
+.navbar-brand{
+  background-color: #0e4b06;
+}
